# dealflow-engine

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  FINANCE_REVIEW.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/.hypothesis/constants/: 004e722d2b39195a  02fb3c1b426206d7  03a0bc33c3be41ac  041b82baf95116f0  0628f2618034526e  068c9e16d4886008  069f1bbe681b4325  07475514dc0bbadb  07b8446a052edf99  08f76577cc30f502  09ae28b390a241d0  0a9221d4acddedf2  0bc3b2f77e74ecd9  0cfa12dfbf9e9abb  10d1155a56587e3a  110a1d1d892c7388  11a4fb9bf042a054  12e7e479072c853b  131e9a8c12e60b9f  13efa0910df75e7a  146ce438f76c65d3  14ce7443b3faf241  15f1b6a27c65c79e  1711dca7bbb78b0f  17e3f8cea4119fc7  1832110feb93928d  1896b5df0e24350d  18baa06439e76d96  1a5326b88fdd03ad  1b03421aacbc7cd8  1c8ad82ba7015765  1dc359315dc82348  1f4b62403fde35c2  1ff82dc6c6014893  219385b4acf67710  2196e604560785f8  22aee50d81961c02  23de3c8efc283fa6  2438213548c974ab  25878421010898fc  (+176 more)
backend/app/: main.py
backend/app/api/: ai_routes.py  routes.py  startup_routes.py  vc_routes.py
backend/app/data/: ai_modifier_research.md  ai_toggle_config.json  industry_benchmarks.json  startup_valuation_benchmarks.json  vc_benchmarks.json
backend/app/engine/: __init__.py  ai_modifier.py  circularity_solver.py  defaults.py  financial_engine.py  models.py  purchase_price.py  (+7 more)
backend/tests/: test_circularity.py  test_defense_ai.py  test_edge_cases.py  test_engine.py  test_financial_identities.py  test_round_timing.py  test_sensitivity.py
(+117 files in other folders)
